--- a/data/theme.toml
+++ b/data/theme.toml
@@ -8,5 +8,6 @@ linkedin = 'https://linkedin.com/in/'
 twitter = 'https://twitter.com/'
 youtube = 'https://youtube.com/user/'
 gitlab = 'https://gitlab.com/'
+stackoverflow = 'https://stackoverflow.com/users/'
 rss = '/'
 about = '/'
